--- a/Workout4Me/2signIn.xaml
+++ b/Workout4Me/2signIn.xaml
@@ -14,6 +14,14 @@
             <RadioButton x:Name="rememberMe" Content="Save my info for next time" HorizontalAlignment="Stretch" Height="31" Canvas.Left="63" Canvas.Top="140" VerticalAlignment="Stretch" Width="202"/>
             <Grid Height="43" Canvas.Left="63" Canvas.Top="44" Width="287" BorderBrush="Black" BorderThickness="2"/>
             <Grid Height="43" Canvas.Left="63" Canvas.Top="92" Width="287" BorderBrush="Black" BorderThickness="2"/>
+            <Button x:Name="login" Content="&#xD;&#xA;Login!" HorizontalAlignment="Stretch" Height="58" Canvas.Left="63" Canvas.Top="228" VerticalAlignment="Stretch" Width="202" BorderBrush="Black" Foreground="Black">
+                <Button.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="#FFFFBABA" Offset="1"/>
+                    </LinearGradientBrush>
+                </Button.Background>
+            </Button>
         </Canvas>
 
     </Grid>
